--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,58 +1,45 @@
-# PHP CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-php/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # Specify the version you desire here
-      - image: circleci/php:7.1-node-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # Using the RAM variation mitigates I/O contention
-      # for database intensive operations.
-      # - image: circleci/mysql:5.7-ram
-      #
-      # - image: redis:2.8.19
-
+      - image: php:7
+      - image: mysql:5
+        environment:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+      - image: selenium/standalone-chrome:3
+    working_directory: ~/your-repository-name
     steps:
       - checkout
 
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
+      # Update Composer and install dependencies
+      - run: composer self-update
+      - run: composer install --prefer-dist
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-            # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+      # Setup database
+      - run: php app/console doctrine:database:create --env=test
+      - run: php app/console doctrine:schema:create --env=test
 
-      - run: composer install -n --prefer-dist
+      - run:
+          name: Run web server
+          command: php app/console server:run --env=test -vvv localhost:8080 > server.log 2>&1
+          background: true
 
-      - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
-          paths:
-            - ./vendor
-      - restore_cache:
-          keys:
-            - node-v1-{{ checksum "package.json" }}
-            - node-v1-
-      - run: yarn install
-      - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
-          paths:
-            - node_modules
+      # Run tests
+      - run: php vendor/bin/behat
+      # and maybe some unit tests
 
-      # prepare the database
-      - run: touch storage/testing.sqlite
-      - run: php artisan migrate --env=testing --database=sqlite_testing --force
+      # Run tests
+      - run: mkdir var/behat_screenshots/
+      # add an empty file so that the directory isn't empty (else copy may fail)
+      - run: touch var/behat_screenshots/empty.txt
 
-      # run tests with phpunit or codecept
-      #- run: ./vendor/bin/phpunit
-      - run: ./vendor/bin/codecept build
-      - run: ./vendor/bin/codecept run
+      - run:
+          name: Run Behat tests
+          command: php vendor/bin/behat
+          # Export environment variable for this single command shell
+          environment:
+            BEHAT_SCREENSHOTS: '1'
+      # and maybe some unit tests
+
+      - store_artifacts:
+          path: var/behat_screenshots/
