--- a/behat.yml
+++ b/behat.yml
@@ -3,9 +3,9 @@ default:
     Behat\MinkExtension:
       base_url: http://localhost:8000
       goutte: ~
-      selenium2:
+      selenium2: ~
 
-    Behat\Symfony2Extension:
+    Behat\Symfony2Extension: ~
 
   suites:
     default:
