--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,52 +2,17 @@ version: 2
 jobs:
   build:
     docker:
-      - image: php:7
-      - image: mysql:5
-        environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
-      - image: selenium/standalone-chrome:3
-    working_directory: ~/test_automatise
+      - image: circleci/node:jessie-browsers
     steps:
       - checkout
-
-      # Install Sudo
-      - run: apt-get install -y sudo
-
-      # Install Composer
-      - run: php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-      - run: php -r "if (hash_file('sha384', 'composer-setup.php') === 'a5c698ffe4b8e849a443b120cd5ba38043260d5c4023dbf93e1558871f1f07f58274fc6f4c93bcfd858c6bd0775cd8d1') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
-      - run: sudo php composer-setup.php --install-dir=/usr/local/bin --filename=composer
-      - run: php -r "unlink('composer-setup.php');"
-
-      # Update Composer and install dependencies
-      - run: composer install --prefer-dist
-
-      # Setup database
-      - run: php app/console doctrine:database:create --env=test
-      - run: php app/console doctrine:schema:create --env=test
-
+      - run: mkdir test-reports
       - run:
-          name: Run web server
-          command: php app/console server:run --env=test -vvv localhost:8080 > server.log 2>&1
+          name: Download Selenium
+          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
+      - run:
+          name: Start Selenium
+          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
           background: true
 
       # Run tests
       - run: php vendor/bin/behat
-      # and maybe some unit tests
-
-      # Run tests
-      - run: mkdir var/behat_screenshots/
-      # add an empty file so that the directory isn't empty (else copy may fail)
-      - run: touch var/behat_screenshots/empty.txt
-
-      - run:
-          name: Run Behat tests
-          command: php vendor/bin/behat
-          # Export environment variable for this single command shell
-          environment:
-            BEHAT_SCREENSHOTS: '1'
-      # and maybe some unit tests
-
-      - store_artifacts:
-          path: var/behat_screenshots/
