browser test fixxxxxxx

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,15 @@ jobs:
           paths:
             - ./vendor
 
+      # Setup database
+      - run: php app/console doctrine:database:create --env=test
+      - run: php app/console doctrine:schema:create --env=test
+
+      - run:
+          name: Run web server
+          command: php app/console server:run --env=test -vvv localhost:8080 > server.log 2>&1
+          background: true
+
       # Run tests
       - run:
           name: "Run Tests"
