--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,9 @@ jobs:
       - image: circleci/php:7.2-node-browsers
       - image: mysql:5
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          DATABASE_CLEANER_ALLOW_REMOTE_DATABASE_URL: true
+          DATABASE_URL: sqlite3::memory:?pool=1
+          DB: sqlite
       - image: selenium/standalone-chrome:3
     working_directory: ~/test_automatise
     steps:
