--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
 
       - run:
           name: Run web server
-          command: php app/console server:run --env=test -vvv localhost:8000 > server.log 2>&1
+          command: php app/console server:run
           background: true
 
       # Run tests
