--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,6 +47,9 @@ jobs:
       # Setup database
       - run: php app/console doctrine:database:create --env=test
       - run: php app/console doctrine:schema:create --env=test
+      - run: php app/console doctrine:schema:update --force
+      - run: php app/console doctrine:fixtures:load
+
 
       - run:
           name: Run web server
