--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,61 +2,27 @@ version: 2
 jobs:
   build:
     docker:
-      #- image: circleci/node:jessie-browsers
-      - image: circleci/php:7.2-node-browsers
+      - image: php:7
+      - image: mysql:5
         environment:
-          DATABASE_URL: 'mysql2://root@127.0.0.1/circle_test?pool=5'
-          DB: mysql
-          RAILS_ENV: test
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_HOST: '%'
-      - image: 'circleci/mysql:5.7-ram'
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
       - image: selenium/standalone-chrome:3
-    working_directory: ~/test_automatise
+    working_directory: ~/your-repository-name
     steps:
       - checkout
 
-      - run: mkdir test-reports
-      - run:
-          name: Download Selenium
-          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
-
-      - run: sudo apt update # PHP CircleCI 2.0 Configuration File# PHP CircleCI 2.0 Configuration File sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo apt install zlib1g-dev libsqlite3-dev
-      - run: sudo docker-php-ext-install zip
-
-      - restore_cache:
-          keys:
-            # "composer.lock" can be used if it is committed to the repo
-            - v1-dependencies-{{ checksum "composer.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-      - run:
-          name: "Install Dependencies"
-          command: composer install -n --prefer-dist
-
-      - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
-          paths:
-            - ./vendor
+      # Update Composer and install dependencies
+      - run: composer self-update
+      - run: composer install --prefer-dist
 
       # Setup database
-      - run: php app/console doctrine:database:create --env=test
-      - run: php app/console doctrine:schema:create --env=test
-      - run: php app/console doctrine:schema:update --force
-      - run: php app/console doctrine:fixtures:load
-
+      - run: php bin/console doctrine:database:create --env=test
+      - run: php bin/console doctrine:schema:create --env=test
 
       - run:
           name: Run web server
-          command: php app/console server:run
+          command: php bin/console server:run --env=test -vvv localhost:8080 > server.log 2>&1
           background: true
 
       # Run tests
-      - run:
-          name: "Run Tests"
-          command: ./vendor/bin/behat
+      - run: ./vendor/bin/behat
