--- a/behat.yml
+++ b/behat.yml
@@ -4,7 +4,7 @@ default:
       base_url: http://localhost:8000
       goutte: ~
       selenium2: ~
-
+      browser_name: chrome
     Behat\Symfony2Extension: ~
 
   suites:
